<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_diary"
            android:icon="@drawable/agenda"
            android:title="@string/agenda" />
        <item
            android:id="@+id/nav_series"
            android:icon="@drawable/list"
            android:title="@string/series" />

    </group>

    <item android:title="@string/entertainment">
        <menu>
            <item
                android:id="@+id/nav_Pantalla"
                android:icon="@android:drawable/ic_dialog_dialer"
                android:title="@string/pantalla" />
            <item
                android:id="@+id/nav_sensors"
                android:icon="@drawable/ic_sensor"
                android:title="@string/sensor" />
            <item
                android:id="@+id/nav_multimedia"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/multimedia" />
        </menu>
    </item>

</menu>
