<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_exit"
        android:orderInCategory="101"
        android:title="@string/btn_exit" />
    <item
        android:id="@+id/menu_firebase"
        android:orderInCategory="100"
        android:title="Test Firebase"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_about"
        android:title="@string/acercaDe"
        app:showAsAction="always"
        android:icon="@drawable/ic_info_white"/>
</menu>
